--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,13 @@
 <md-toolbar style="min-height:40px;font-size:0.9em">
     <div class="material-toolbar-tool" layout="row" layout-padding>
         <h1 style="margin:0;" flex>
-            my App
+            AngularJS Vrac
         </h1>
         <md-button ui-sref="home">
             Home
+        </md-button>
+        <md-button ui-sref="playsound">
+            Play Sound
         </md-button>
         <md-button ui-sref="assessments.list">
             Assessment
